# aurapro

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
.claude/: custom_instructions.md  settings.local.json
analytics-engine/: requirements.txt
analytics-engine/app/: consumer.py  main.py
analytics-engine/app/core/: config.py
analytics-engine/app/metrics/: redis_keys.py  rolling_window.py
analytics-engine/app/schemas/: sales_event.py
analytics-engine/scripts/: forecast_stockout.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6e8d9c8f708f_add_product_cost_category_sku_barcode_.py  bb0ba2b854b1_add_sku_to_product_variants.py  bb1978619a5a_add_customer_types_table_and_credit_.py  e52e63ae983f_initial_schema.py
backend/app/: main.py
backend/app/cache/: redis_client.py
backend/app/core/: config.py  security.py
backend/app/db/: async_base.py  async_session.py  (+2 more)
backend/scripts/: auto_purchaser.py  test_flow.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
infra/kafka-topics/: topics.yaml
shared/schemas/: purchase_order_event.json  sales_event.json
workers/: Cargo.toml
workers/crates/outbox-processor/: Cargo.toml
workers/crates/outbox-processor/src/: main.rs
workers/crates/worker-core/: Cargo.toml
workers/crates/worker-core/src/: config.rs  db.rs  kafka.rs  lib.rs
workers/crates/worker-core/src/schemas/: mod.rs  sales_event.rs
workers/crates/worker-processor/: Cargo.toml
workers/crates/worker-processor/src/: main.rs
(+73 files in other folders)
