[workspace]
resolver = "2"
members = [
    "crates/worker-core",
    "crates/worker-processor",
    "crates/outbox-processor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
jsonschema = "0.19"
once_cell = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
