[package]
name = "worker-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
once_cell.workspace = true
uuid.workspace = true
chrono.workspace = true
